--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -6,7 +6,12 @@ body, html, h1, h2, h3, h4, h5, h6, ul, ol, li, dl, dt, dd, header, menu, sectio
   padding: 0;
   margin: 0;
 }
-
+html {
+  overflow: hidden;
+}
+body {
+  overflow: auto;
+}
 ul, ol, li {
   list-style: none;
 }
